--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,7 @@
     "ionic": "driftyco/ionic-bower#1.0.1"
   },
   "dependencies": {
-    "angular-google-places-autocomplete": "~0.2.7"
+    "angular-google-places-autocomplete": "~0.2.7",
+    "angular-ui-mask": "~1.2.0"
   }
 }
